k8s/app-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: cloudtool-deployment

spec:

  replicas: 2

  selector:
    matchLabels:
      app: cloudtool

  template:

    metadata:
      labels:
        app: cloudtool

    spec:

      containers:

      - name: cloudtool

        image: paresh0101/cloudtool:v11

        ports:

        - containerPort: 8080

        resources:
          requests:
           cpu: "250m"
           memory: "128Mi"

          limits:
           cpu: "500m"
           memory: "256Mi"
        
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 20
          periodSeconds: 10
