k8s/deployment.yml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: cloudtool-deployment

spec:
  replicas: 2

  selector:
    matchLabels:
      app: cloudtool

  template:

    metadata:
      labels:
        app: cloudtool

    spec:

      containers:

      - name: cloudtool

        image:  paresh0101/cloudtool:v11

        ports:

        - containerPort: 8080
