k8s/app-service.yml
apiVersion: v1
kind: Service

metadata:
  name: cloudtool-service

spec:

  type: NodePort

  selector:
    app: cloudtool

  ports:

  - port: 8080
    targetPort: 8080
  
  type: NodePort
