k8s/cloudtool-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cloudtool-ingress

spec:

  rules:

  - host: cloudtool.local

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: cloudtool-service

            port:

              number: 8080
